@@ -26,10 +26,11 @@
 #define NK_NO_DAMAGE 0x01
 #define NK_SPLASH (0x02|0x04) // 0x4 = splash & split
 #define NK_SPLASHSPLIT 0x04
-#define NK_NO_CARDFIX 0x08
+#define NK_NO_CARDFIX_ATK 0x08
 #define NK_NO_ELEFIX 0x10
 #define NK_IGNORE_DEF 0x20
 #define NK_IGNORE_FLEE 0x40
+#define NK_NO_CARDFIX_DEF 0x08
 
 //A skill with 3 would be no damage + splash: area of effect.
 //Constants to identify a skill's inf2 value.
